--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "collab-vm-1.2-binary-protocol"]
+[submodule "CollaborativeVM-BinaryProtocol"]
 	path = collab-vm-1.2-binary-protocol
-	url = https://github.com/computernewb/collab-vm-1.2-binary-protocol
+	url = https://github.com/ganewies/CollaborativeVM-BinaryProtocol
