--- a/package.json
+++ b/package.json
@@ -23,5 +23,9 @@
 		"serve": "node cvmts/dist/index.js",
 		"clean": "npx rimraf .parcel-cache .yarn **/node_modules **/dist cvm-rs/target cvm-rs/index.node",
 		"format": "prettier -w config.example.toml && yarn workspaces foreach -Apt run format"
+	},
+	"dependencies": {
+		"@wize-logic/nodejs-rfb": "^4.2.0",
+		"send-discord-webhook": "^0.1.2"
 	}
 }
