--- a/cvmts/package.json
+++ b/cvmts/package.json
@@ -12,7 +12,7 @@
 	"author": "Elijah R, modeco80",
 	"license": "GPL-3.0",
 	"dependencies": {
-		"@computernewb/nodejs-rfb": "^0.4.2",
+		"@wize-logic/nodejs-rfb": "^0.4.2",
 		"@cvmts/cvm-rs": "*",
 		"@discordjs/opus": "^0.10.0",
 		"@maxmind/geoip2-node": "^5.0.0",
