--- a/cvmts/package.json
+++ b/cvmts/package.json
@@ -24,7 +24,8 @@
 		"msgpackr": "^1.10.2",
 		"pino": "^9.3.1",
 		"toml": "^3.0.0",
-		"ws": "^8.17.1"
+		"ws": "^8.17.1",
+		"@ifiib/webhook": "^1.1.2"
 	},
 	"devDependencies": {
 		"@types/node": "^20.12.5",
